--- a/src/app/components/technological-system/technological-system.component.html
+++ b/src/app/components/technological-system/technological-system.component.html
@@ -77,7 +77,7 @@
                 (formGroup.get('technologicalSystemName')?.dirty ||
                 formGroup.get('technologicalSystemName')?.touched ||
                 isSubmitted)" id="technologicalSystemName" placeholder="Unesite naziv tehnološkog sistema"
-                    formControlName="firstName">
+                    formControlName="technologicalSystemName">
                 <span *ngIf="formGroup.get('technologicalSystemName')?.hasError('required') && 
                 (formGroup.get('technologicalSystemName')?.dirty ||
                 formGroup.get('technologicalSystemName')?.touched ||
