--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -1,95 +1,186 @@
 <form [formGroup]="formGroup" (submit)="onSubmitForm()">
-    <div class="form-group">
-        <label for="personName" [class.text-danger]="formGroup.get('personName')?.invalid && 
-        (formGroup.get('personName')?.dirty ||
-        formGroup.get('personName')?.touched ||
-        isSubmitted)">Korisničko ime</label>
-        <input type="text" class="form-control" [class.is-invalid]="formGroup.get('personName')?.invalid && 
-        (formGroup.get('personName')?.dirty ||
-        formGroup.get('personName')?.touched ||
-        isSubmitted)" id="personName" placeholder="Unesite korisničko ime" formControlName="personName">
-        <span *ngIf="formGroup.get('personName')?.hasError('required') && 
-        (formGroup.get('personName')?.dirty ||
-        formGroup.get('personName')?.touched ||
-        isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
+    <div class="modal-body">
+        <div class="form-group">
+            <label for="firstName" [class.text-danger]="formGroup.get('firstName')?.invalid && 
+            (formGroup.get('firstName')?.dirty ||
+            formGroup.get('firstName')?.touched ||
+            isSubmitted)">Ime</label>
+            <input type="text" class="form-control" [class.is-invalid]="formGroup.get('firstName')?.invalid && 
+            (formGroup.get('firstName')?.dirty ||
+            formGroup.get('firstName')?.touched ||
+            isSubmitted)" id="firstName" placeholder="Unesite ime" formControlName="firstName">
+            <span *ngIf="formGroup.get('firstName')?.hasError('required') && 
+            (formGroup.get('firstName')?.dirty ||
+            formGroup.get('firstName')?.touched ||
+            isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
+        </div>
+        <div class="form-group">
+            <label for="lastName" [class.text-danger]="formGroup.get('lastName')?.invalid && 
+            (formGroup.get('lastName')?.dirty ||
+            formGroup.get('lastName')?.touched ||
+            isSubmitted)">Prezime</label>
+            <input type="text" class="form-control" [class.is-invalid]="formGroup.get('lastName')?.invalid && 
+            (formGroup.get('lastName')?.dirty ||
+            formGroup.get('lastName')?.touched ||
+            isSubmitted)" id="lastName" placeholder="Unesite prezime" formControlName="lastName">
+            <span *ngIf="formGroup.get('lastName')?.hasError('required') && 
+            (formGroup.get('lastName')?.dirty ||
+            formGroup.get('lastName')?.touched ||
+            isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
+        </div>
+        <div class="form-group">
+            <label for="email" [class.text-danger]="formGroup.get('email')?.invalid && 
+            (formGroup.get('email')?.dirty ||
+            formGroup.get('email')?.touched ||
+            isSubmitted)">Email</label>
+            <input type="email" class="form-control" [class.is-invalid]="formGroup.get('email')?.invalid && 
+            (formGroup.get('email')?.dirty ||
+            formGroup.get('email')?.touched ||
+            isSubmitted)" id="email" placeholder="Unesite email" formControlName="email">
+            <span *ngIf="formGroup.get('email')?.hasError('required') && 
+            (formGroup.get('email')?.dirty ||
+            formGroup.get('email')?.touched ||
+            isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
+            <span *ngIf="formGroup.get('email')?.hasError('email') &&
+            (formGroup.get('email')?.dirty
+            || formGroup.get('email')?.touched
+            || isSubmitted)" class="text-danger">Email adresa mora biti u ispravnom formatu</span>
+        </div>
+        <div class="form-group">
+            <label for="password" [class.text-danger]="formGroup.get('password')?.invalid && 
+            (formGroup.get('password')?.dirty ||
+            formGroup.get('password')?.touched ||
+            isSubmitted)">Lozinka</label>
+            <input type="password" class="form-control" [class.is-invalid]="formGroup.get('password')?.invalid && 
+            (formGroup.get('password')?.dirty ||
+            formGroup.get('password')?.touched ||
+            isSubmitted)" id="password" placeholder="Lozinka" formControlName="password">
+            <span *ngIf="formGroup.get('password')?.hasError('required') && 
+            (formGroup.get('password')?.dirty ||
+            formGroup.get('password')?.touched ||
+            isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
+        </div>
+        <div class="form-group">
+            <label for="confirmPassword" [class.text-danger]="formGroup.get('confirmPassword')?.invalid && 
+            (formGroup.get('confirmPassword')?.dirty ||
+            formGroup.get('confirmPassword')?.touched ||
+            isSubmitted)">Potvrda lozinke</label>
+            <input type="password" class="form-control" [class.is-invalid]="formGroup.get('confirmPassword')?.invalid && 
+            (formGroup.get('confirmPassword')?.dirty ||
+            formGroup.get('confirmPassword')?.touched ||
+            isSubmitted)" id="confirmPassword" placeholder="Potvrda lozinke" formControlName="confirmPassword">
+            <span *ngIf="formGroup.get('confirmPassword')?.hasError('required') && 
+            (formGroup.get('confirmPassword')?.dirty ||
+            formGroup.get('confirmPassword')?.touched ||
+            isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
+        </div>
+        <div class="form-group">
+            <label for="jmbg" [class.text-danger]="formGroup.get('jmbg')?.invalid && 
+            (formGroup.get('jmbg')?.dirty ||
+            formGroup.get('jmbg')?.touched ||
+            isSubmitted)">JMBG</label>
+            <input type="text" class="form-control" [class.is-invalid]="formGroup.get('jmbg')?.invalid && 
+            (formGroup.get('jmbg')?.dirty ||
+            formGroup.get('jbmg')?.touched ||
+            isSubmitted)" id="jmbg" placeholder="Unesite JMBG" formControlName="jmbg">
+            <span *ngIf="formGroup.get('jmbg')?.hasError('required') && 
+            (formGroup.get('jmbg')?.dirty ||
+            formGroup.get('jmbg')?.touched ||
+            isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
+        </div>
+        <div class="form-group">
+            <label for="phoneNumber" [class.text-danger]="formGroup.get('phoneNumber')?.invalid && 
+            (formGroup.get('phoneNumber')?.dirty ||
+            formGroup.get('phoneNumber')?.touched ||
+            isSubmitted)">Broj telefona</label>
+            <input type="text" class="form-control" [class.is-invalid]="formGroup.get('phoneNumber')?.invalid && 
+            (formGroup.get('phoneNumber')?.dirty ||
+            formGroup.get('proneNumber')?.touched ||
+            isSubmitted)" id="phoneNumber" placeholder="Unesite broj telefona" formControlName="phoneNumber">
+            <span *ngIf="formGroup.get('phoneNumber')?.hasError('required') && 
+            (formGroup.get('phoneNumber')?.dirty ||
+            formGroup.get('phoneNumber')?.touched ||
+            isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
+        </div>
+        <div class="form-group">
+            <label for="address" [class.text-danger]="formGroup.get('address')?.invalid && 
+            (formGroup.get('address')?.dirty ||
+            formGroup.get('address')?.touched ||
+            isSubmitted)">Adresa</label>
+            <input type="text" class="form-control" [class.is-invalid]="formGroup.get('address')?.invalid && 
+            (formGroup.get('address')?.dirty ||
+            formGroup.get('address')?.touched ||
+            isSubmitted)" id="address" placeholder="Unesite adresu" formControlName="address">
+            <span *ngIf="formGroup.get('address')?.hasError('required') && 
+            (formGroup.get('address')?.dirty ||
+            formGroup.get('address')?.touched ||
+            isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
+        </div>
+        <div class="form-group">
+            <label for="city" [class.text-danger]="formGroup.get('city')?.invalid && 
+            (formGroup.get('city')?.dirty ||
+            formGroup.get('city')?.touched ||
+            isSubmitted)">Grad</label>
+            <input type="text" class="form-control" [class.is-invalid]="formGroup.get('city')?.invalid && 
+            (formGroup.get('city')?.dirty ||
+            formGroup.get('city')?.touched ||
+            isSubmitted)" id="city" placeholder="Unesite grad" formControlName="city">
+            <span *ngIf="formGroup.get('city')?.hasError('required') && 
+            (formGroup.get('city')?.dirty ||
+            formGroup.get('city')?.touched ||
+            isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
+        </div>
+        <div class="form-group">
+            <label for="sallary" [class.text-danger]="formGroup.get('sallary')?.invalid && 
+            (formGroup.get('sallary')?.dirty ||
+            formGroup.get('sallary')?.touched ||
+            isSubmitted)">Plata</label>
+            <input type="number" class="form-control" [class.is-invalid]="formGroup.get('sallary')?.invalid && 
+            (formGroup.get('sallary')?.dirty ||
+            formGroup.get('sallary')?.touched ||
+            isSubmitted)" id="sallary" placeholder="Unesite platu" formControlName="sallary">
+            <span *ngIf="formGroup.get('sallary')?.hasError('required') && 
+            (formGroup.get('sallary')?.dirty ||
+            formGroup.get('sallary')?.touched ||
+            isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
+        </div>
+        <div class="form-group">
+            <label for="dateOfEmployment" [class.text-danger]="formGroup.get('dateOfEmployment')?.invalid && 
+            (formGroup.get('dateOfEmployment')?.dirty ||
+            formGroup.get('dateOfEmployment')?.touched ||
+            isSubmitted)">Datum zaposlenja</label>
+            <input class="form-control" [class.is-invalid]="formGroup.get('dateOfEmployment')?.invalid && 
+                (formGroup.get('dateOfEmployment')?.dirty ||
+                formGroup.get('dateOfEmployment')?.touched ||
+                isSubmitted)" placeholder="Izaberite dadum zaposlenja" name="dp" ngbDatepicker
+                #dpDateOfEmployment="ngbDatepicker" formControlName="dateOfEmployment"
+                (click)="dpDateOfEmployment.toggle()" />
+            <span *ngIf="formGroup.get('dateOfEmployment')?.hasError('dateOfEmployment') && 
+                (formGroup.get('dateOfEmployment')?.dirty ||
+                formGroup.get('dateOfEmployment')?.touched ||
+                isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
+        </div>
+        <div class="form-group">
+            <label for="organizationalUnitId" [class.text-danger]="formGroup.get('organizationalUnitId')?.invalid && 
+            (formGroup.get('organizationalUnitId')?.dirty ||
+            formGroup.get('organizationalUnitId')?.touched ||
+            isSubmitted)">Organizaciona jedinica</label>
+            <select class="form-select" [class.is-invalid]="formGroup.get('organizationalUnitId')?.invalid && 
+            (formGroup.get('organizationalUnitId')?.dirty ||
+            formGroup.get('organizationalUnitId')?.touched ||
+            isSubmitted)" id="organizationalUnitId" placeholder="Unesite organizacionu jedinicu"
+                formControlName="organizationalUnitId">
+                <option *ngFor="let organizationalUnit of organizationalUnits"
+                    [value]="organizationalUnit.organizationalUnitId">{{
+                    organizationalUnit.organizationalUnitName }}</option>
+            </select>
+            <span *ngIf="formGroup.get('organizationalUnitId')?.hasError('required') && 
+                (formGroup.get('organizationalUnitId')?.dirty ||
+                formGroup.get('organizationalUnitId')?.touched ||
+                isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="email" [class.text-danger]="formGroup.get('email')?.invalid && 
-        (formGroup.get('email')?.dirty ||
-        formGroup.get('email')?.touched ||
-        isSubmitted)">Email</label>
-        <input type="email" class="form-control" [class.is-invalid]="formGroup.get('email')?.invalid && 
-        (formGroup.get('email')?.dirty ||
-        formGroup.get('email')?.touched ||
-        isSubmitted)" id="email" placeholder="Unesite email" formControlName="email">
-        <span *ngIf="formGroup.get('email')?.hasError('required') && 
-        (formGroup.get('email')?.dirty ||
-        formGroup.get('email')?.touched ||
-        isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
-        <span *ngIf="formGroup.get('email')?.hasError('email') &&
-        (formGroup.get('email')?.dirty
-        || formGroup.get('email')?.touched
-        || isSubmitted)" class="text-danger">Email adresa mora biti u ispravnom formatu</span>
+    <div class="modal-footer">
+        <button type="submit" class="btn btn-primary">Registruj se</button>
     </div>
-    <div class="form-group">
-        <label for="phoneNumber" [class.text-danger]="formGroup.get('phoneNumber')?.invalid && 
-        (formGroup.get('phoneNumber')?.dirty ||
-        formGroup.get('phoneNumber')?.touched ||
-        isSubmitted)">Broj telefona</label>
-        <input type="text" class="form-control" [class.is-invalid]="formGroup.get('phoneNumber')?.invalid && 
-        (formGroup.get('phoneNumber')?.dirty ||
-        formGroup.get('phoneNumber')?.touched ||
-        isSubmitted)" id="phoneNumber" placeholder="Unesite broj telefona" formControlName="phoneNumber">
-        <span *ngIf="formGroup.get('phoneNumber')?.hasError('required') && 
-        (formGroup.get('phoneNumber')?.dirty ||
-        formGroup.get('phoneNumber')?.touched ||
-        isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
-    </div>
-    <div class="form-group">
-        <label for="password" [class.text-danger]="formGroup.get('password')?.invalid && 
-        (formGroup.get('password')?.dirty ||
-        formGroup.get('password')?.touched ||
-        isSubmitted)">Lozinka</label>
-        <input type="password" class="form-control" [class.is-invalid]="formGroup.get('password')?.invalid && 
-        (formGroup.get('password')?.dirty ||
-        formGroup.get('password')?.touched ||
-        isSubmitted)" id="password" placeholder="Lozinka" formControlName="password">
-        <span *ngIf="formGroup.get('password')?.hasError('required') && 
-        (formGroup.get('password')?.dirty ||
-        formGroup.get('password')?.touched ||
-        isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
-    </div>
-    <div class="form-group">
-        <label for="confirmPassword" [class.text-danger]="formGroup.get('confirmPassword')?.invalid && 
-        (formGroup.get('confirmPassword')?.dirty ||
-        formGroup.get('confirmPassword')?.touched ||
-        isSubmitted)">Potvrda lozinke</label>
-        <input type="password" class="form-control" [class.is-invalid]="formGroup.get('confirmPassword')?.invalid && 
-        (formGroup.get('confirmPassword')?.dirty ||
-        formGroup.get('confirmPassword')?.touched ||
-        isSubmitted)" id="confirmPassword" placeholder="Potvrda lozinke" formControlName="confirmPassword">
-        <span *ngIf="formGroup.get('confirmPassword')?.hasError('required') && 
-        (formGroup.get('confirmPassword')?.dirty ||
-        formGroup.get('confirmPassword')?.touched ||
-        isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
-    </div>
-    <div class="form-group">
-        <label for="userType" [class.text-danger]="formGroup.get('userType')?.invalid && 
-        (formGroup.get('userType')?.dirty ||
-        formGroup.get('userType')?.touched ||
-        isSubmitted)">Tip korisnika</label>
-        <select class="form-select" [class.is-invalid]="formGroup.get('userType')?.invalid && 
-        (formGroup.get('userType')?.dirty ||
-        formGroup.get('userType')?.touched ||
-        isSubmitted)" id="userType" placeholder="Izaberite tip korisnika" formControlName="userType">
-            <option [value]="'Admin'">Admin</option>
-            <option [value]="'User'">User</option>
-        </select>
-        <span *ngIf="formGroup.get('userType')?.hasError('required') && 
-        (formGroup.get('userType')?.dirty ||
-        formGroup.get('userType')?.touched ||
-        isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
-    </div>
-
-    <button type="submit" class="btn btn-primary">Registruj se</button>
 </form>
